update product feature complete